[gd_scene load_steps=4 format=3 uid="uid://duh085t6uvdti"]

[ext_resource type="Script" uid="uid://b6w0pixxxvdin" path="res://Script/Weapon/snow_pistol.gd" id="1_co3jw"]
[ext_resource type="Texture2D" uid="uid://ctnqfk6r4451d" path="res://Asset/Weapon/SnowPistol.png" id="2_v2voq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_308uy"]
radius = 7.0

[node name="SnowPistol" type="Area2D" groups=["Weapon"]]
collision_mask = 3
script = ExtResource("1_co3jw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 1)
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_308uy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(5, 1)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_v2voq")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(27, -3)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="." to="." method="find_player"]
[connection signal="body_exited" from="." to="." method="lost_player"]
[connection signal="timeout" from="Timer" to="." method="time_up"]
